--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<h1>Hello, NGINX is serving HI HI HIif</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>nuBlog</title>
+    <link rel="stylesheet" href="styles/style.css"> <!-- Link to external CSS -->
+</head>
+<body>
+    <div class="content">
+        <h1>you have reached the home of badc0vers's nuBlog</h1>
+        <p>stay tuned... great things, are coming soon...</p>
+        <img src="images/silly.jpg" alt="A silly image">
+        <div>
+            <a href="about.html" class="link">About Us</a>
+        </div>
+        <footer>&copy; 2025 nuBlog | badc0vers</footer>
+    </div>
+</body>
+</html>
