favicon and more

--- a/about.html
+++ b/about.html
@@ -5,15 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - NuBlog</title>
     <link rel="stylesheet" href="styles/style.css"> <!-- Link to external CSS -->
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon"> <!-- Add favicon here -->
 </head>
 <body>
     <div class="content">
         <h1>about nuBlog</h1>
-        <p>nuBlog is the home of legenday X dot com user, "badc0vers"es musings and other things of the sort...</p>
+        <p>nuBlog is the home of legendary X dot com user, "badc0vers"’s musings and other things of the sort...</p>
+        
         <div>
-            <a href="index.html" class="link">Back to Home</a>
+            <a href="index.html" class="link">Home</a> | 
+            <a href="blog.html" class="link">Blog</a> | 
+            <a href="about.html" class="link">About Us</a>
         </div>
-        <footer>&copy; 2025 nuBlog | badcovers</footer>
+
+        <footer>&copy; 2025 nuBlog | badc0vers</footer>
     </div>
 </body>
 </html>
