--- a/index.html
+++ b/index.html
@@ -5,15 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>nuBlog</title>
     <link rel="stylesheet" href="styles/style.css"> <!-- Link to external CSS -->
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon"> <!-- Add favicon here -->
 </head>
 <body>
     <div class="content">
         <h1>you have reached the home of badc0vers's nuBlog</h1>
         <p>stay tuned... great things, are coming soon...</p>
         <img src="images/silly.jpg" alt="A silly image">
+        
         <div>
+            <a href="index.html" class="link">Home</a> | 
+            <a href="blog.html" class="link">Blog</a> | 
             <a href="about.html" class="link">About Us</a>
         </div>
+        
         <footer>&copy; 2025 nuBlog | badc0vers</footer>
     </div>
 </body>
