--- a/about.html
+++ b/about.html
@@ -9,14 +9,16 @@
 </head>
 <body>
     <div class="content">
-        <h1>about nuBlog</h1>
-        <p>nuBlog is the home of legendary X dot com user, "badc0vers"’s musings and other things of the sort...</p>
-        
         <div>
-            <a href="index.html" class="link">Home</a> | 
-            <a href="blog.html" class="link">Blog</a> | 
-            <a href="about.html" class="link">About Us</a>
+            <a href="index.html" class="link">home</a> | 
+            <a href="blog.html" class="link">blog</a> | 
+            <a href="about.html" class="link">about me</a> | 
         </div>
+
+        <h1>about nuBlog</h1>
+        <p>nuBlog is the home of legendary X dot com user, "badc0vers"es musings and other things of the sort...</p>
+        <img src="images/wayne.jpg" alt="wanye" style="max-width: 100%; width: 300px; height: auto;">
+        
 
         <footer>&copy; 2025 nuBlog | badc0vers</footer>
     </div>
