--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - NuBlog</title>
+    <title>about - NuBlog</title>
     <link rel="stylesheet" href="styles/style.css"> <!-- Link to external CSS -->
     <link rel="icon" href="images/favicon.ico" type="image/x-icon"> <!-- Add favicon here -->
 </head>
@@ -12,12 +12,15 @@
         <div>
             <a href="index.html" class="link">home</a> | 
             <a href="blog.html" class="link">blog</a> | 
-            <a href="about.html" class="link">about me</a> | 
+            <a href="about.html" class="link">about me</a>
         </div>
 
-        <h1>about nuBlog</h1>
-        <p>nuBlog is the home of legendary X dot com user, "badc0vers"es musings and other things of the sort...</p>
-        <img src="images/wayne.jpg" alt="wanye" style="max-width: 100%; width: 300px; height: auto;">
+        <h1>about coby</h1>
+        <p>nuBlog is the home of legendary X dot com user, <a href="https://x.com/badc0vers" target="_blank">badc0vers</a>'s musings and other things of the sort...</p>        <p>badc0vers goes by a few names...</p>
+        <p>coby, wayne, conrad, leon, <a href="https://github.com/llostinthesauce" target="_blank">llostinthesauce</a>, and many more...</p>        <br><br/>
+        <p>the hope here is to post some longer form writing. sometimes ranting on the tl is not enough, and there is something about putting some thoughts or words into the air. i am well aware that this is more for me than anyone else, so please do not feel special reading anything. this is also a little project, as i am self hosting this on an old pi. enjoy!</p>
+
+        <img src="images/wayne.jpg" alt="wanye" class="styled-image2">
         
 
         <footer>&copy; 2025 nuBlog | badc0vers</footer>
