--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog - NuBlog</title>
+    <title>blog - NuBlog</title>
     <link rel="stylesheet" href="styles/style.css"> <!-- Link to external CSS -->
     <link rel="icon" href="images/favicon.ico" type="image/x-icon"> <!-- Add favicon here -->
 </head>
@@ -12,16 +12,16 @@
         <div>
             <a href="index.html" class="link">home</a> | 
             <a href="blog.html" class="link">blog</a> | 
-            <a href="about.html" class="link">about me</a> | 
+            <a href="about.html" class="link">about me</a>
         </div>
 
         <h1>blog</h1>
         <p>welcome to the nuBlog! here are my latest posts:</p>
         <ul>
             <!-- List of Blog Posts -->
-            <li><a href="post1.html" class="link">december 2025</a></li>
-            <li><a href="post2.html" class="link">Second Blog Post</a></li>
-            <li><a href="post3.html" class="link">Third Blog Post</a></li>
+            <li><a href="blog/post1.html" class="link">december 2025</a></li>
+            <li><a href="blog/post2.html" class="link">Second Blog Post</a></li>
+            <li><a href="blog/post3.html" class="link">Third Blog Post</a></li>
             <!-- Add more blog post links as needed -->
         </ul>
         <footer>&copy; 2025 nuBlog | badc0vers</footer>
