--- a/blog.html
+++ b/blog.html
@@ -16,15 +16,20 @@
         </div>
 
         <h1>blog</h1>
-        <p>welcome to the nuBlog! here are my latest posts:</p>
+        <p>welcome to my nuBlog! below you will find my latest posts:</p>
+        <p><i>(i am a big fan of having an open dialouge about any of the topics discussed here, no matter how mundane. i simply would like to encourage some conversation, so if i say anything that sparks your interest, please feel free to shoot me and e-mail, it is located in the footer!)</i></p>
         <ul>
             <!-- List of Blog Posts -->
-            <li><a href="blog/post1.html" class="link">december 2025</a></li>
-            <li><a href="blog/post2.html" class="link">Second Blog Post</a></li>
+            <li><a href="blog/post1.html" class="link">31 december 2024</a></li>
+            <li><a href="blog/post2.html" class="link">coming soon</a></li>
+
+            <!--
+
             <li><a href="blog/post3.html" class="link">Third Blog Post</a></li>
-            <!-- Add more blog post links as needed -->
+            
+            Add more blog post links as needed -->
         </ul>
-        <footer>&copy; 2025 nuBlog | badc0vers</footer>
+        <footer>&copy; 2025 nuBlog | contact <a href="mailto:cobyshanks@gmail.com">badc0vers</a></footer>
     </div>
 </body>
 </html>
