--- a/about.html
+++ b/about.html
@@ -15,15 +15,17 @@
             <a href="about.html" class="link">about me</a>
         </div>
 
-        <h1>about coby</h1>
-        <p>nuBlog is the home of legendary X dot com user, <a href="https://x.com/badc0vers" target="_blank">badc0vers</a>'s musings and other things of the sort...</p>        <p>badc0vers goes by a few names...</p>
-        <p>coby, wayne, conrad, leon, <a href="https://github.com/llostinthesauce" target="_blank">llostinthesauce</a>, and many more...</p>        <br><br/>
-        <p>the hope here is to post some longer form writing. sometimes ranting on the tl is not enough, and there is something about putting some thoughts or words into the air. i am well aware that this is more for me than anyone else, so please do not feel special reading anything. this is also a little project, as i am self hosting this on an old pi. enjoy!</p>
-
+        <h1>about coby & this site</h1>
+        <p>nuBlog is the home of legendary X dot com user, <a href="https://x.com/badc0vers" target="_blank">badc0vers</a>'s musings and other things of the sort... this so called, "badc0vers" goes by a few names... coby, wayne, conrad, leon, llostinthesauce and others!</p>
+        <p>coby happens to be a fourth year uni student studying it and cs. he is also the broadcast engineer of his schools radio station, <a href="https://kcou.fm" target="_blank">kcou.fm</a> and has a weekly show there on tuesday @ 8pm. coby likes <a href="https://music.apple.com/profile/cobyshanks" target="_blank">music</a>  and of course <a href="https://letterbox/llostinthesauce/" target="_blank">movies</a> and is an avid media enjoyer. he has been trying to get into <a href="https://www.goodreads.com/user/show/158053435-corbin-shanks" target="_blank">books</a> more, amassing a large collection. perhaps someday he may write his own... he has recently became a iPod hobbyist, but let's be real, the seeds were always sown. he really likes old physical tech, whinch includes but is not limited to: iPods, digital camera, film cameras, old smartphones, desktop computers, and radio broadcast equipment. aside from all of that, he walks religiously, cooks fairly, is data/knowledge driven, and has a decent interest in the crypto and finance sphere. he is quite into reading/using artifical intelligence and engages quite heavily in the tech discourse on X and in person when possible. he is proficient in C, C++, Python, Swift, sql~, bash scripting, (html/css/js), and other lanugages. i jailbroke my first iPhone when i was 9 years old. -- okay, enough, NEXT!</p>
+        <p>the hope here is to post some longer form writing. sometimes ranting on the tl is not enough, and there is something about putting some thoughts or words into the air. i am well aware that this is more for me than anyone else, so please do not feel special reading anything. this is also a little project, as i am self hosting this on an old pi, using nginx, and a gui-less pios installation. enjoy! ( bonus pts if u know this font =3)</p>
+        <p>find me on X/formerly twitter, (again) at <a href="https://x.com/badc0vers" target="_blank">https://x.com/badc0vers</a></p>
+        <p>or find me on yt: <a href="https://www.youtube.com/@Zombieboy317" target="_blank">@Zombieboy317</a></p>
+        <p>or check out my wca profile: <a href="https://www.worldcubeassociation.org/persons/2017SHAN03" target="_blank">World Cube Association</a></p>
         <img src="images/wayne.jpg" alt="wanye" class="styled-image2">
         
 
-        <footer>&copy; 2025 nuBlog | badc0vers</footer>
+        <footer>&copy; 2025 nuBlog | contact <a href="mailto:cobyshanks@gmail.com">badc0vers</a></footer>
     </div>
 </body>
 </html>
