--- a/blog.html
+++ b/blog.html
@@ -29,7 +29,12 @@
             
             Add more blog post links as needed -->
         </ul>
-        <footer>&copy; 2025 nuBlog | contact <a href="mailto:cobyshanks@gmail.com">badc0vers</a></footer>
+        <footer>
+            <audio autoplay loop>
+                <source src="audio/shb.mp3" type="audio/mp3">
+            </audio>        
+            &copy; 2025 nuBlog | contact <a href="mailto:cobyshanks@gmail.com">badc0vers</a>
+        </footer>
     </div>
 </body>
 </html>
