--- a/about.html
+++ b/about.html
@@ -25,7 +25,12 @@
         <img src="images/wayne.jpg" alt="wanye" class="styled-image2">
         
 
-        <footer>&copy; 2025 nuBlog | contact <a href="mailto:cobyshanks@gmail.com">badc0vers</a></footer>
+        <footer>
+            <audio autoplay loop>
+                <source src="audio/shb.mp3" type="audio/mp3">
+            </audio>        
+            &copy; 2025 nuBlog | contact <a href="mailto:cobyshanks@gmail.com">badc0vers</a>
+        </footer>
     </div>
 </body>
 </html>
