--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
         
         <img src="images/silly.jpg" alt="A silly image" class="styled-image">
         
-        <footer>&copy; 2025 nuBlog | contact <a href="mailto:cobyshanks@gmail.com">badc0vers</a></footer>
+        <footer>
+            <audio autoplay loop>
+                <source src="audio/shb.mp3" type="audio/mp3">
+            </audio>        
+            &copy; 2025 nuBlog | contact <a href="mailto:cobyshanks@gmail.com">badc0vers</a>
+        </footer>
     </div>
 </body>
 </html>
