--- a/about.html
+++ b/about.html
@@ -10,9 +10,10 @@
 <body>
     <div class="content">
         <div>
-            <a href="index.html" class="link">home</a> | 
+            <a href="index.php" class="link">home</a> | 
             <a href="blog.html" class="link">blog</a> | 
-            <a href="about.html" class="link">about me</a>
+            <a href="about.html" class="link">about me</a> |
+            <a href="guestbook.php" class="link">guestbook</a> <!-- Link to guestbook -->
         </div>
 
         <h1>about coby & this site</h1>
